--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.Br5vIxwM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CHyq3nzp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.r_KELjDD.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CJk2kS9-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.v6lGiyLr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.aZHIKDCl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Haq8omwQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DDXdRlwt.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D-7lw55g.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cfc2DBzb.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CQWSt0h9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cjqni9oV.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CtoCMEsm.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <main class="svelte-1dp7egg"><h1 data-svelte-h="svelte-1ouan9e">Welcome to My Website</h1> <p data-svelte-h="svelte-cwlq2q">Check out the Go game by clicking the button below.</p> <button class="svelte-1dp7egg" data-svelte-h="svelte-1qq4zpo">Go to Go Game</button> </main> 
 			
 			<script>
 				{
-					__sveltekit_1m8ijhy = {
+					__sveltekit_rp9ed1 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CHyq3nzp.js"),
-						import("./_app/immutable/entry/app.DDXdRlwt.js")
+						import("./_app/immutable/entry/start.CJk2kS9-.js"),
+						import("./_app/immutable/entry/app.D-7lw55g.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
